--- a/rdm/package.json
+++ b/rdm/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "test": "node ./bin/www",
+    "prod": "node ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "cookie-parser": "^1.4.5",
     "debug": "^4.1.1",
     "ejs": "^3.1.3",
